--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,40 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.testscripts.LoginTest</td>
+<td>com.qa.testscripts.CategoryProductTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyLoginWithEmptyEmailCredential</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyLoginShowsProperLoggedInMessage</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyLoginWithValidCredential</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyLoginWithInvalidCredentials</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyDeleteLogin</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyRegistartionWithInvalidEmail</td>
-<td>frontend </td>
+<td>verifySubCategorySearch</td>
+<td>category frontend </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyLoginWithEmptyCredentials</td>
-<td>frontend </td>
+<td>verifyAllSubCategoryIsShown</td>
+<td>category frontend </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAllCategoryIsShown</td>
+<td>category frontend </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
