--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,51 +4,6 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.testscripts.RegistrationTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyPageTitle</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyRegistrationWithExistingUser</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyRegistartionWithValidCredentials</td>
-<td>regression frontend </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifySignUpWithEmptyCredentials</td>
-<td>frontend </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyRegistartionWithInvalidEmail</td>
-<td>frontend </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
 <td>com.qa.testrunner.TestRunner</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -79,6 +34,43 @@
 <td>&nbsp;</td>
 <td>tearDownClass</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td>com.qa.testscripts.CategoryProductTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySubCategorySearch</td>
+<td>category frontend </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAllSubCategoryIsShown</td>
+<td>category frontend </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAllCategoryIsShown</td>
+<td>category frontend </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
 <tr>
 <td>com.qa.testscripts.LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -115,32 +107,6 @@
 <td>verifyLoginWithEmptyCredentials</td>
 <td>frontend </td>
 </tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>com.qa.testscripts.AutomationExcerciseHomePageTests</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyPageTitle</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
